[gd_scene load_steps=39 format=2]

[ext_resource path="res://Assets/BoxesBanners/Box_Blank_Square.png" type="Texture" id=1]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Blue_Square.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Fonts/fredoka-one/FredokaOne-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Fonts/KiriFont.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/BoxesBanners/Box_WhiteOutline_Square.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Item2.png" type="Texture" id=9]
[ext_resource path="res://Assets/UIIcons/Icon_Small_Blank_Pause.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/Box_Rounded.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/levelImages/pinya.png" type="Texture" id=12]
[ext_resource path="res://Levels/1PrutasAtGulay/Level8/PausePanel8.tscn" type="PackedScene" id=13]
[ext_resource path="res://Levels/1PrutasAtGulay/Level8/level8.gd" type="Script" id=14]
[ext_resource path="res://Levels/1PrutasAtGulay/PrutasAtGulayLevel.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Audio/levelsAudio/Pinya/pickAnswer.mp3" type="AudioStream" id=16]
[ext_resource path="res://Assets/Audio/levelsAudio/Pinya/pinya.mp3" type="AudioStream" id=17]
[ext_resource path="res://Assets/Audio/levelsAudio/Pinya/choiceB.mp3" type="AudioStream" id=18]
[ext_resource path="res://Assets/Audio/levelsAudio/Pinya/choiceA.mp3" type="AudioStream" id=19]
[ext_resource path="res://Assets/Audio/levelsAudio/Pinya/askVoice8.mp3" type="AudioStream" id=20]
[ext_resource path="res://Assets/Audio/levelsAudio/Pinya/choiceC.mp3" type="AudioStream" id=21]

[sub_resource type="DynamicFont" id=1]
size = 33
outline_size = 2
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_filter = true
font_data = ExtResource( 7 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
font_data = ExtResource( 7 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 33
use_filter = true
font_data = ExtResource( 7 )
fallback/0 = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 2
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 3
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 3
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 50
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=18]
size = 32
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -3
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=19]
size = 32
use_filter = true
extra_spacing_top = -3
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 30
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
extra_spacing_top = -4
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 30
use_filter = true
extra_spacing_top = -4
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 30
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 30
use_filter = true
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=14]
size = 30
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
extra_spacing_top = -6
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
size = 30
use_filter = true
extra_spacing_top = -8
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
size = 65
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 6 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=17]
size = 65
use_filter = true
font_data = ExtResource( 6 )
fallback/0 = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="levelBox" type="TextureRect" parent="Panel/NinePatchRect"]
anchor_left = 0.213867
anchor_top = 0.035
anchor_right = 0.780273
anchor_bottom = 0.138333
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="levelLine" type="Label" parent="Panel/NinePatchRect/levelBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "pangwalong tanong"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="levelLabel" type="Label" parent="Panel/NinePatchRect/levelBox"]
anchor_left = 0.0137931
anchor_right = 0.984483
anchor_bottom = 0.903229
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "pangwalong tanong"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="levelLabel2" type="Label" parent="Panel/NinePatchRect/levelBox/levelLabel"]
anchor_left = -0.0017762
anchor_top = 0.0178571
anchor_right = 0.998224
anchor_bottom = 0.946428
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "pangwalong tanong"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pauseButton" type="Button" parent="Panel/NinePatchRect"]
anchor_left = 0.00683594
anchor_top = 0.0283333
anchor_right = 0.100586
anchor_bottom = 0.146667
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pauseIcon" type="TextureRect" parent="Panel/NinePatchRect/pauseButton"]
anchor_left = 0.322917
anchor_top = 0.217391
anchor_right = 0.65625
anchor_bottom = 0.782609
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="imageHolder" type="Sprite" parent="Panel/NinePatchRect"]
position = Vector2( 250, 299 )
scale = Vector2( 0.244296, 0.247043 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="pinya" type="TextureRect" parent="Panel/NinePatchRect/imageHolder"]
unique_name_in_owner = true
anchor_left = 0.150597
anchor_top = 0.0611696
anchor_right = 0.76583
anchor_bottom = 0.867346
margin_left = -761.5
margin_top = -761.0
margin_right = -761.5
margin_bottom = -761.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="repeat" type="Button" parent="Panel/NinePatchRect/imageHolder/pinya"]
unique_name_in_owner = true
anchor_left = 0.240274
anchor_top = 0.128375
anchor_right = 1.25998
anchor_bottom = 0.128375
margin_top = 113.691
margin_right = -350.13
margin_bottom = 945.691
rect_rotation = 0.0114815
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="coverButton" type="Panel" parent="Panel/NinePatchRect/imageHolder/pinya"]
unique_name_in_owner = true
anchor_left = 0.104871
anchor_top = 0.0395774
anchor_right = 1.045
anchor_bottom = 1.06216
margin_right = 3.8349
margin_bottom = -2.70117
rect_rotation = 0.175307
input_pass_on_modal_close_click = false
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="infoPinya" type="AudioStreamPlayer" parent="Panel/NinePatchRect/imageHolder/pinya"]
unique_name_in_owner = true
stream = ExtResource( 17 )
bus = "Voices"

[node name="imageText" type="TextureRect" parent="Panel/NinePatchRect"]
anchor_left = 0.12793
anchor_top = 0.811667
anchor_right = 0.347656
anchor_bottom = 0.918333
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="name" type="Label" parent="Panel/NinePatchRect/imageText"]
anchor_top = 0.0156218
anchor_right = 0.999999
anchor_bottom = 1.01562
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 5 )
text = "Pinya"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="nameoutline" type="Label" parent="Panel/NinePatchRect/imageText"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 6 )
text = "Pinya"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="name" type="Label" parent="Panel/NinePatchRect/imageText/nameoutline"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 7 )
text = "Pinya"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="askHolder" type="TextureRect" parent="Panel/NinePatchRect"]
anchor_left = 0.470703
anchor_top = 0.173333
anchor_right = 0.960938
anchor_bottom = 0.758333
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="askLabel" type="Label" parent="Panel/NinePatchRect/askHolder"]
anchor_left = 0.0478087
anchor_top = 0.0541311
anchor_right = 0.954182
anchor_bottom = 0.350427
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 18 )
text = "1. Batay sa iyong narinig, ang nasa larawan ba ay gulay?"
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="askLabel2" type="Label" parent="Panel/NinePatchRect/askHolder/askLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 19 )
text = "1. Batay sa iyong narinig, ang nasa larawan ba ay gulay?"
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="askVoice8" type="AudioStreamPlayer" parent="Panel/NinePatchRect/askHolder/askLabel"]
unique_name_in_owner = true
stream = ExtResource( 20 )
bus = "Voices"

[node name="answerLabelA" type="Label" parent="Panel/NinePatchRect/askHolder"]
anchor_left = 0.0557771
anchor_top = 0.350428
anchor_right = 0.95219
anchor_bottom = 0.467237
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 10 )
text = "A. Oo, ito ay gulay."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabel2" type="Label" parent="Panel/NinePatchRect/askHolder/answerLabelA"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 11 )
text = "A. Oo, ito ay gulay."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="choiceA" type="AudioStreamPlayer" parent="Panel/NinePatchRect/askHolder/answerLabelA"]
unique_name_in_owner = true
stream = ExtResource( 19 )
bus = "Voices"

[node name="answerLabelB" type="Label" parent="Panel/NinePatchRect/askHolder"]
anchor_left = 0.0657372
anchor_top = 0.51567
anchor_right = 0.948206
anchor_bottom = 0.641026
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 12 )
text = "B. Hindi, Ito ay prutas."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabelB2" type="Label" parent="Panel/NinePatchRect/askHolder/answerLabelB"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 13 )
text = "B. Hindi, Ito ay prutas."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="choiceB" type="AudioStreamPlayer" parent="Panel/NinePatchRect/askHolder/answerLabelB"]
unique_name_in_owner = true
stream = ExtResource( 18 )
bus = "Voices"

[node name="answerLabelB2" type="Label" parent="Panel/NinePatchRect/askHolder"]
anchor_left = 0.0597609
anchor_top = 0.692308
anchor_right = 0.948206
anchor_bottom = 0.903134
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 14 )
text = "C. Pareho itong gulay at prutas."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabelB2" type="Label" parent="Panel/NinePatchRect/askHolder/answerLabelB2"]
anchor_top = 0.0405405
anchor_right = 1.0
anchor_bottom = 1.09459
margin_right = 3.05176e-05
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 15 )
text = "C. Pareho itong gulay at prutas."
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="choiceC" type="AudioStreamPlayer" parent="Panel/NinePatchRect/askHolder/answerLabelB2"]
unique_name_in_owner = true
stream = ExtResource( 21 )
bus = "Voices"

[node name="AnswerPanel" type="Control" parent="Panel/NinePatchRect"]
unique_name_in_owner = true
anchor_left = 0.553711
anchor_top = 0.771667
anchor_right = 0.890625
anchor_bottom = 0.930001
__meta__ = {
"_edit_lock_": true
}

[node name="A" type="Button" parent="Panel/NinePatchRect/AnswerPanel"]
unique_name_in_owner = true
visible = false
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 11 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickA" type="Label" parent="Panel/NinePatchRect/AnswerPanel/A"]
anchor_left = 0.0947368
anchor_top = 0.0842112
anchor_right = 0.905263
anchor_bottom = 0.926316
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 16 )
text = "A
"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickA2" type="Label" parent="Panel/NinePatchRect/AnswerPanel/A/pickA"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 17 )
text = "A"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="B" type="Button" parent="Panel/NinePatchRect/AnswerPanel"]
unique_name_in_owner = true
visible = false
margin_left = 125.0
margin_right = 220.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 11 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickB" type="Label" parent="Panel/NinePatchRect/AnswerPanel/B"]
anchor_left = 0.0842105
anchor_top = 0.147368
anchor_right = 0.915789
anchor_bottom = 0.936842
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 16 )
text = "B
"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickB2" type="Label" parent="Panel/NinePatchRect/AnswerPanel/B/pickB"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 17 )
text = "B"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="C" type="Button" parent="Panel/NinePatchRect/AnswerPanel"]
unique_name_in_owner = true
visible = false
margin_left = 250.0
margin_right = 345.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 11 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickC" type="Label" parent="Panel/NinePatchRect/AnswerPanel/C"]
anchor_left = 0.0842105
anchor_top = 0.0947368
anchor_right = 0.915789
anchor_bottom = 0.936842
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 16 )
text = "C"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickC2" type="Label" parent="Panel/NinePatchRect/AnswerPanel/C/pickC"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 17 )
text = "C"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickAnswer" type="AudioStreamPlayer" parent="Panel/NinePatchRect/AnswerPanel"]
unique_name_in_owner = true
stream = ExtResource( 16 )
bus = "Voices"

[node name="pausePanel" parent="." instance=ExtResource( 13 )]
unique_name_in_owner = true

[node name="PrutasAtGulay" parent="." instance=ExtResource( 15 )]
unique_name_in_owner = true

[connection signal="pressed" from="Panel/NinePatchRect/pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/imageHolder/pinya/repeat" to="." method="_on_repeat_pressed"]
[connection signal="finished" from="Panel/NinePatchRect/imageHolder/pinya/infoPinya" to="." method="_on_infoPinya_finished"]
[connection signal="finished" from="Panel/NinePatchRect/askHolder/askLabel/askVoice8" to="." method="_on_askVoice8_finished"]
[connection signal="finished" from="Panel/NinePatchRect/askHolder/answerLabelA/choiceA" to="." method="_on_choiceA_finished"]
[connection signal="finished" from="Panel/NinePatchRect/askHolder/answerLabelB/choiceB" to="." method="_on_choiceB_finished"]
[connection signal="finished" from="Panel/NinePatchRect/askHolder/answerLabelB2/choiceC" to="." method="_on_choiceC_finished"]
[connection signal="pressed" from="Panel/NinePatchRect/AnswerPanel/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/AnswerPanel/B" to="." method="_on_B_pressed"]
[connection signal="finished" from="Panel/NinePatchRect/AnswerPanel/pickAnswer" to="." method="_on_pickAnswer_finished"]
[connection signal="pressed" from="pausePanel/bg/x" to="." method="_on_x_pressed"]

[editable path="pausePanel"]
